--- a/config/i3/config
+++ b/config/i3/config
@@ -1,9 +1,8 @@
 # Set font
-font pango:Inconsolata Mono 10
+font pango:Inconsolat Mono 10
 
 # Gaps
-gaps inner 10
-gaps outer 10
+gaps inner 20
 smart_gaps on
 
 # Borders
@@ -12,7 +11,7 @@ new_float pixel 0
 hide_edge_borders both
 
 # Set default workspace layout
-#workspace_layout tabbed
+workspace_layout tabbed
 
 # Specific window configuration
 for_window    [class=".*"]                   sticky enable
@@ -21,6 +20,7 @@ for_window    [class="Pinentry"]             floating enable
 for_window    [class="copyq"]                floating enable
 for_window    [class="Peek"]                 floating enable
 for_window    [class="Rofi"]                 floating enable
+for_window    [class="Google-chrome"]        move container to $workspace2, title_format "Google Chrome"
 for_window    [class="Vivaldi"]              move container to $workspace2, title_format "Vivaldi"
 for_window    [class="Wire"]                 move container to $workspace3
 for_window    [class="Slack"]                move container to $workspace3
@@ -65,6 +65,7 @@ bar {
   tray_output none
 }
 
+
 # Use Windows as a modifier key
 set $mod Mod4
 
@@ -89,7 +90,129 @@ bindcode $mod+32 exec "pgrep -x rofi && killall rofi || rofi -normal-window -sho
 bindcode $mod+33 exec "passmenu"
 
 # Start networkmanager_dmenu (n)
-???LINES MISSING
+bindcode $mod+57 exec "networkmanager_dmenu"
+
+# Start a screenshot tool (m)
+bindcode $mod+58 exec "flameshot gui"
+
+# Kill focused window (q)
+bindcode $mod+Shift+24 kill
+
+# Change focus (h)(j)(k)(l)
+bindcode $mod+43 focus left
+bindcode $mod+44 focus down
+bindcode $mod+45 focus up
+bindcode $mod+46 focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
+# Move focused window (h)(j)(k)(l)
+bindcode $mod+Shift+43 move left
+bindcode $mod+Shift+44 move down
+bindcode $mod+Shift+45 move up
+bindcode $mod+Shift+46 move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
+# Split (v)
+bindcode $mod+Shift+55 split h
+bindcode $mod+55 split v
+
+# Enter fullscreen mode (f)
+bindcode $mod+41 fullscreen
+
+# Container layout: split (e)
+bindcode $mod+26 layout toggle split
+
+# Container layout: tabbed (w)
+bindcode $mod+25 layout tabbed
+
+# Toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
+
+# Toggle sticky state (s)
+bindcode $mod+39 sticky toggle
+
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
+# Change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# Focus the parent container (a)
+bindcode $mod+38 focus parent
+
+# Focus the child container (a)
+bindcode $mod+Shift+38 focus child
+
+# Media keys
+bindsym XF86AudioMute         exec py3-cmd click 1 volume_status
+bindsym XF86AudioRaiseVolume  exec py3-cmd click 4 volume_status
+bindsym XF86AudioLowerVolume  exec py3-cmd click 5 volume_status
+bindsym XF86MonBrightnessUp   exec set-brightness inc
+bindsym XF86MonBrightnessDown exec set-brightness dec
+
+# Reload the configuration file (c)
+bindcode $mod+Shift+54 reload
+
+# Restart i3 inplace (r)
+bindcode $mod+Shift+27 restart
+
+# Global hotkeys
+bindcode $mod+49 exec copyq toggle
+
+# Workspaces
+focus_follows_mouse no
+
+set $workspace1 workspace number 1
+set $workspace2 workspace number 2
+set $workspace3 workspace number 3
+set $workspace4 workspace number 4
+set $workspace5 workspace number 5
+set $workspace6 workspace number 6
+set $workspace7 workspace number 7
+set $workspace8 workspace number 8
+set $workspace9 workspace number 9
+set $workspace0 workspace number 10
+
+# Switch to workspace using keypad
+bindcode $numlock+$mod+87 $workspace1
+bindcode $numlock+$mod+88 $workspace2
+bindcode $numlock+$mod+89 $workspace3
+bindcode $numlock+$mod+83 $workspace4
+bindcode $numlock+$mod+84 $workspace5
+bindcode $numlock+$mod+85 $workspace6
+bindcode $numlock+$mod+79 $workspace7
+bindcode $numlock+$mod+80 $workspace8
+bindcode $numlock+$mod+81 $workspace9
+bindcode $numlock+$mod+90 $workspace0
+
+# Switch to workspace using number row
+bindsym $mod+1 $workspace1
+bindsym $mod+2 $workspace2
+bindsym $mod+3 $workspace3
+bindsym $mod+4 $workspace4
+bindsym $mod+5 $workspace5
+bindsym $mod+6 $workspace6
+bindsym $mod+7 $workspace7
+bindsym $mod+8 $workspace8
+bindsym $mod+9 $workspace9
+bindsym $mod+0 $workspace0
+
+# Move window to workspace using keypad
+bindcode $numlock+$mod+Shift+87 move container to $workspace1
+bindcode $numlock+$mod+Shift+88 move container to $workspace2
+bindcode $numlock+$mod+Shift+89 move container to $workspace3
+bindcode $numlock+$mod+Shift+83 move container to $workspace4
+bindcode $numlock+$mod+Shift+84 move container to $workspace5
+bindcode $numlock+$mod+Shift+85 move container to $workspace6
 bindcode $numlock+$mod+Shift+79 move container to $workspace7
 bindcode $numlock+$mod+Shift+80 move container to $workspace8
 bindcode $numlock+$mod+Shift+81 move container to $workspace9
@@ -173,3 +296,8 @@ mode "$mode_workspaces_monitors" {
   bindsym Escape mode "default"
 }
 bindcode $mod+Shift+58 mode $mode_workspaces_monitors
+
+# Autostart some apps
+
+exec_always "killall compton; compton &"
+exec_always "pgrep -x unclutter || (unclutter &)"
