--- a/config/i3/config
+++ b/config/i3/config
@@ -11,7 +11,7 @@ new_float pixel 0
 hide_edge_borders both
 
 # Set default workspace layout
-workspace_layout tabbed
+workspace_layout default
 
 # Specific window configuration
 for_window    [class=".*"]                   sticky enable
@@ -20,7 +20,6 @@ for_window    [class="Pinentry"]             floating enable
 for_window    [class="copyq"]                floating enable
 for_window    [class="Peek"]                 floating enable
 for_window    [class="Rofi"]                 floating enable
-for_window    [class="Google-chrome"]        move container to $workspace2, title_format "Google Chrome"
 for_window    [class="Vivaldi"]              move container to $workspace2, title_format "Vivaldi"
 for_window    [class="Wire"]                 move container to $workspace3
 for_window    [class="Slack"]                move container to $workspace3
