--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -58,7 +58,7 @@ battery_level {
 }
 
 clock {
-  format = '{Europe/Copenhagen}'
+  format = '{Europe/Dublin}'
   format_time = '{icon}   %H:%M   '
   blocks = '󰀯󰀻󰀤󰀰󰀥󰀱󰀦󰀲󰀧󰀳󰀨󰀴󰀩󰀵󰀪󰀶󰀫󰀷󰀬󰀸󰀭󰀹󰀮󰀺'
 }
