Slight modifications to i3status + packages

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -28,7 +28,7 @@ order += 'sysdata'
 order += 'xrandr'
 order += 'xrandr_rotate'
 order += 'group wifi'
-order += 'ethernet enp62s0u1'
+order += 'ethernet wlp2s0'
 order += 'file_status PIA'
 order += 'whatismyip'
 order += 'backlight'
@@ -76,7 +76,7 @@ dropboxd_status {
   status_on = ""
 }
 
-ethernet enp62s0u1 {
+ethernet wlp2s0 {
   format_up = '󰀍'
   format_down = ''
 }
