--- a/config/i3/config
+++ b/config/i3/config
@@ -1,6 +1,6 @@
 # Set font
-#font pango:Taskbar, Inconsolata Mono 10
-font pango: Inconsolata Mono 10, Cantarell 9
+font pango:Taskbar, Inconsolata Mono 10
+#font pango: Inconsolata Mono 10, Cantarell 9
 
 # Gaps
 gaps inner 20
