Adding s3cfg - need to figure out how to encrypt this

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -12,11 +12,11 @@ order += 'usbguard'
 order += 'yubikey'
 order += 'file_status MSITVPN'
 order += 'external_script pacdiff'
-order += 'external_script checkofficial'
+#order += 'external_script checkofficial'
 order += 'external_script checkupdates'
-order += 'external_script checkupdates_aur'
-order += 'external_script checkupdates_vcs'
-order += 'external_script checkrebuild'
+#order += 'external_script checkupdates_aur'
+#order += 'external_script checkupdates_vcs'
+#order += 'external_script checkrebuild'
 order += 'external_script checkfirmware'
 order += 'file_status decrypted'
 order += 'scratchpad_async'
