Adding gtk-3.0 settings + more todo

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -14,7 +14,7 @@ order += 'file_status MSITVPN'
 order += 'external_script pacdiff'
 #order += 'external_script checkofficial'
 order += 'external_script checkupdates'
-#order += 'external_script checkupdates_aur'
+order += 'external_script checkupdates_aur'
 #order += 'external_script checkupdates_vcs'
 #order += 'external_script checkrebuild'
 order += 'external_script checkfirmware'
@@ -36,7 +36,13 @@ order += 'battery_level'
 order += 'keyboard_layout'
 order += 'external_script date'
 order += 'clock'
+order += 'external_script testing'
 
+
+external_script testing {
+  script_path = 'cat /home/james/testing'
+  format = '{output}'
+}
 
 backlight {
   cache_timeout = -1
@@ -103,7 +109,7 @@ external_script checkupdates_aur {
 
 external_script checkupdates_vcs {
   cache_timeout = 1200
-  script_path = "is_online && aur vercmp-devel"
+  script_path = "is_online && aur vercmp devel"
   format = '\?if=line&color=degraded 󰀼  {line}'
   notifications = {'click': {'msg': '{output_full}'}}
 }
