--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -36,7 +36,6 @@ order += 'battery_level'
 order += 'keyboard_layout'
 order += 'external_script date'
 order += 'clock'
-order += 'external_script testing'
 
 
 external_script testing {
@@ -50,6 +49,7 @@ backlight {
   low_tune_threshold = 10
   command = 'light'
   format = '\?color=good 󰀅  {level}%'
+  on_udev_backlight = 'refresh_and_freeze'
 }
 
 battery_level {
@@ -59,6 +59,7 @@ battery_level {
   format = '{icon}   {percent}%'
   notify_low_level = true
   cache_timeout = 1
+  on_udev_power_supply = 'refresh'
 }
 
 clock {
@@ -196,7 +197,7 @@ whatismyip {
   format = '{country_iso}'
   icon_on = '󰀈'
   icon_off = '󰀈'
-  expected = {'country_iso': 'SE'}
+  expected = {'country_iso': 'IE'}
   url_geo = 'https://whatismyip.maximbaz.com/json'
 }
 
