--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -103,7 +103,9 @@ external_script checkupdates {
 
 external_script checkupdates_aur {
   cache_timeout = 1200
-  script_path = "is_online && aur sync --list | cut -f2,3 | aur vercmp"
+  #script_path = "is_online && aur sync --list | cut -f2,3 | aur vercmp"
+  script_path = "is_online && aur vercmp -d couldinho-arch-aur"
+  #script_path = "is_online && aur vercmp -d couldinho-arch-aur -a | grep '<-'"
   format = '\?if=line&color=degraded 󰀽  {line}'
   notifications = {'click': {'msg': '{output_full}'}}
 }
