--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -98,6 +98,10 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-[couldinho]
-SigLevel = Optional TrustAll
-Server = https://s3-eu-west-1.amazonaws.com/couldinho-arch-aur/x86_64
+
+#[couldinho]
+#SigLevel = Optional TrustAll
+#Server = https://s3-eu-west-1.amazonaws.com/couldinho-arch-aur/x86_64
+Include = /etc/pacman.d/couldinho-aur
+#CacheDir = /var/cache/pacman/pkg
+#CacheDir = /var/cache/pacman/couldinho-aur
