Adding connman_dmenu - commenting out for now as it only works as root

--- a/config/i3/config
+++ b/config/i3/config
@@ -91,6 +91,8 @@ bindcode $mod+33 exec "passmenu"
 
 # Start networkmanager_dmenu (n)
 bindcode $mod+57 exec "networkmanager_dmenu"
+#bindcode $mod+57 exec "connman_dmenu"
+#bindcode $mod+Shift+57 exec "connman_dmenu scan"
 
 # Start a screenshot tool (m)
 bindcode $mod+58 exec "flameshot gui"
