--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -207,14 +207,16 @@ group wifi {
   button_next = 1
   button_prev = 0
 
-  wifi {
+  wifi brief {
+    cache_timeout = -1
     signal_bad = 0
     bitrate_bad = 0
     bitrate_degraded = 0
     format = '󰀆|󰀆'
   }
 
-  wifi {
+  wifi detailed {
+    cache_timeout = -1
     signal_bad = 0
     bitrate_bad = 0
     bitrate_degraded = 0
