Remove cache-timeout setting for i3status wifi
The setting of -1 caused the processor to go full blast for some
reason, so this has been left as default.

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -10,24 +10,24 @@ general {
 
 order += 'usbguard'
 order += 'yubikey'
-order += 'file_status MSITVPN'
-order += 'external_script pacdiff'
+#order += 'file_status MSITVPN'
+#order += 'external_script pacdiff'
 #order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
 #order += 'external_script checkupdates_vcs'
 #order += 'external_script checkrebuild'
 order += 'external_script checkfirmware'
-order += 'file_status decrypted'
+#order += 'file_status decrypted'
 order += 'scratchpad_async'
 order += 'net_rate'
 order += 'diskdata'
 order += 'sysdata'
 order += 'xrandr'
-order += 'xrandr_rotate'
+#order += 'xrandr_rotate'
 order += 'group wifi'
 order += 'ethernet wlp2s0'
-order += 'file_status PIA'
+#order += 'file_status PIA'
 order += 'whatismyip'
 order += 'backlight'
 order += 'volume_status'
@@ -208,7 +208,7 @@ group wifi {
   button_prev = 0
 
   wifi brief {
-    cache_timeout = -1
+    #cache_timeout = -1
     signal_bad = 0
     bitrate_bad = 0
     bitrate_degraded = 0
@@ -216,7 +216,7 @@ group wifi {
   }
 
   wifi detailed {
-    cache_timeout = -1
+    #cache_timeout = -1
     signal_bad = 0
     bitrate_bad = 0
     bitrate_degraded = 0
