Modify pacman config files

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -99,9 +99,5 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-#[couldinho]
-#SigLevel = Optional TrustAll
-#Server = https://s3-eu-west-1.amazonaws.com/couldinho-arch-aur/x86_64
-Include = /etc/pacman.d/couldinho-aur
-#CacheDir = /var/cache/pacman/pkg
-#CacheDir = /var/cache/pacman/couldinho-aur
+#[couldinho-arch-aur]
+Include = /etc/pacman.d/couldinho-arch-aur
