Fix is_online in i3status

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -96,23 +96,21 @@ external_script checkofficial {
 
 external_script checkupdates {
   cache_timeout = 1200
-  script_path = "is_online && checkupdates"
+  script_path = "if is_online; then checkupdates; fi"
   format = '\?if=line&color=degraded 󰀾  {line}'
   notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkupdates_aur {
   cache_timeout = 1200
-  #script_path = "is_online && aur sync --list | cut -f2,3 | aur vercmp"
-  script_path = "is_online && aur vercmp -d couldinho-arch-aur"
-  #script_path = "is_online && aur vercmp -d couldinho-arch-aur -a | grep '<-'"
+  script_path = "if is_online; then aur vercmp -d couldinho-arch-aur; fi"
   format = '\?if=line&color=degraded 󰀽  {line}'
   notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkupdates_vcs {
   cache_timeout = 1200
-  script_path = "is_online && aur vercmp devel"
+  script_path = "if is_online; then aur vercmp devel; fi"
   format = '\?if=line&color=degraded 󰀼  {line}'
   notifications = {'click': {'msg': '{output_full}'}}
 }
