--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -38,11 +38,6 @@ order += 'external_script date'
 order += 'clock'
 
 
-external_script testing {
-  script_path = 'cat /home/james/testing'
-  format = '{output}'
-}
-
 backlight {
   cache_timeout = -1
   brightness_delta = 10
@@ -89,37 +84,37 @@ external_script date {
 
 external_script checkofficial {
   cache_timeout = 1200
+  button_show_notification = 1
   script_path = "check-aur-became-official"
   format = '\?if=line&color=degraded 󰀽  official {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkupdates {
   cache_timeout = 1200
+  button_show_notification = 1
   script_path = "if is_online; then checkupdates; fi"
   format = '\?if=line&color=degraded 󰀾  {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkupdates_aur {
   cache_timeout = 1200
+  button_show_notification = 1
   script_path = "if is_online; then aur vercmp -d couldinho-arch-aur; fi"
   format = '\?if=line&color=degraded 󰀽  {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkupdates_vcs {
   cache_timeout = 1200
+  button_show_notification = 1
   script_path = "if is_online; then aur vercmp devel; fi"
   format = '\?if=line&color=degraded 󰀼  {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkrebuild {
   cache_timeout = -1
+  button_show_notification = 1
   script_path = "checkrebuild | grep maximbaz || true"
   format = '\?if=line&color=degraded 󰁂  {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 external_script checkfirmware {
@@ -131,9 +126,9 @@ external_script checkfirmware {
 
 external_script pacdiff {
   cache_timeout = -1
+  button_show_notification = 1
   script_path = "pacdiff -o"
   format = '\?if=line&color=degraded   {line}'
-  notifications = {'click': {'msg': '{output_full}'}}
 }
 
 keyboard_layout {
