Add sha check to PKGBUILD

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -22,7 +22,7 @@ source=(
     grub-btrfs-config
     zz_custom.sh
 )
-sha256sums=(SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP)
+sha256sums=(SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP)
 
 package_couldinho-base() {
     install=couldinho-base.install
