--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -21,8 +21,9 @@ source=(
     snap-pac.conf
     grub-btrfs-config
     zz_custom.sh
+    usbguard-daemon.conf
 )
-sha256sums=(SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP)
+sha256sums=(SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP SKIP)
 
 package_couldinho-base() {
     install=couldinho-base.install
