--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -180,59 +180,60 @@ package_couldinho-desktop() {
 
     # xorg
     depends+=(
-        xorg-server         # X server
-        xorg-xfontsel       # Selecting X11 fonts easily
-        xorg-xinit          # Start up X and various WM's
-        xorg-xprop          # Display X properties
-        xorg-xrandr         # Resize & Rotate
+        xorg-server         	# X server
+        xorg-xfontsel       	# Selecting X11 fonts easily
+        xorg-xinit          	# Start up X and various WM's
+        xorg-xprop          	# Display X properties
+        xorg-xrandr         	# Resize & Rotate
     )
 
     # i3
     depends+=(
-        i3-gaps             # i3 window manager with gaps between windows
-        i3status            # Status bar for i3
-        py3status           # Manage i3status through python
-        i3ipc-python        # IPC for i3 via python
+        i3-gaps                 # i3 window manager with gaps between windows
+        i3status                # Status bar for i3
+        py3status               # Manage i3status through python
+        i3ipc-python            # IPC for i3 via python
     )
 
     # Login manager
     depends+=(
-        lightdm             # Login manager
-        lightdm-gtk-greeter # Theme for login manager
+        lightdm             	# Login manager
+        lightdm-gtk-greeter 	# Theme for login manager
     )
 
     # Further i3 packages
     depends+=(
-        rofi                # dmenu replacement
-        rofi-calc           # Wrapper for qalculate
-        libqalculate        # More powerful calculator
-        rofi-dmenu          # Wrapper for things depending on dmenu binary
-        ttf-inconsolata     # Font for terminal and status etc.
-        otf-font-awesome    # Font with icons
-        python-tzlocal      # Used within the clock for the status bar
-        gsimplecal          # GTK calendar for the status bar
-        dunst               # Notification library
-        python-pydbus       # Python DBus connector (used by usbguard i3status module)
+        rofi                	# dmenu replacement
+        rofi-calc           	# Wrapper for qalculate
+        libqalculate        	# More powerful calculator
+        rofi-dmenu          	# Wrapper for things depending on dmenu binary
+        ttf-inconsolata     	# Font for terminal and status etc.
+        otf-font-awesome    	# Font with icons
+        python-tzlocal      	# Used within the clock for the status bar
+        gsimplecal          	# GTK calendar for the status bar
+        dunst               	# Notification library
+        python-pydbus           # Python DBus connector (used by usbguard i3status module)
+        yubikey-touch-detector  # i3status notification for when yubikey needs attention 
     )
 
     # Multimedia
     depends+=(
-        alsa-utils          # Sound support
-        pulseaudio          # Sound server
-        pulseaudio-alsa     # ALSA config for pulseaudio
-        pamixer             # Command line mixer
+        alsa-utils          	# Sound support
+        pulseaudio          	# Sound server
+        pulseaudio-alsa     	# ALSA config for pulseaudio
+        pamixer             	# Command line mixer
     )
 
     # Terminal + desktop tools
     depends+=(
-        kitty               # GPU enhanced terminal emulator
-        flameshot           # Screenshot tool
-        compton             # X compositor
-        copyq               # Copy/Paste utility
-        unclutter           # Hide mouse in i3 when not in use
-        ranger              # File manager from terminal (vim keybindings)
-        python-pillow       # Used to view pictures within ranger
-        freerdp             # Remote desktop client
+        kitty               	# GPU enhanced terminal emulator
+        flameshot           	# Screenshot tool
+        compton             	# X compositor
+        copyq               	# Copy/Paste utility
+        unclutter           	# Hide mouse in i3 when not in use
+        ranger              	# File manager from terminal (vim keybindings)
+        python-pillow       	# Used to view pictures within ranger
+        freerdp             	# Remote desktop client
     )
 
     # Web
