Modify echoip to personal server

--- a/stow/desktop/.i3status.conf
+++ b/stow/desktop/.i3status.conf
@@ -193,7 +193,7 @@ whatismyip {
   icon_on = '󰀈'
   icon_off = '󰀈'
   expected = {'country_iso': 'IE'}
-  url_geo = 'https://whatismyip.maximbaz.com/json'
+  url_geo = 'https://echoip.coulson.ie/json'
 }
 
 group wifi {
