--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -230,10 +230,10 @@ xrandr_rotate {
 usbguard {
   allow_urgent = True
   filters = ['block']
-  format_device = ' {format_action_reject} [{name}|{usb_id}] {format_action_allow}'
-  format_action_allow = ''
-  format_action_reject = ''
-  format_button_filter = ''
+  format = '[{format_device}]'
+  format_device = ' {format_button_reject} [{name}|{usb_id}] {format_button_allow} '
+  format_button_allow = ''
+  format_button_reject = ''
   format_notification_message = ''
 }
 
