--- a/stow/desktop/.i3status.conf
+++ b/stow/desktop/.i3status.conf
@@ -231,9 +231,9 @@ usbguard {
   allow_urgent = True
   filters = ['block']
   format = '[{format_device}]'
-  format_device = ' {format_button_reject} [{name}|{usb_id}] {format_button_allow} '
-  format_button_allow = ''
-  format_button_reject = ''
+  format_device = ' {format_action_reject} [{name}|{usb_id}] {format_action_allow} '
+  format_action_allow = ''
+  format_action_reject = ''
   format_notification_message = ''
 }
 
