Add username regex and mappings to pass-git

--- a/stow/base/.config/pass-git-helper/git-pass-mapping.ini
+++ b/stow/base/.config/pass-git-helper/git-pass-mapping.ini
@@ -1,8 +1,15 @@
+[DEFAULT]
+username_extractor=regex_search
+regex_username=^username: (.*)$
+
 [github.com/kontax*]
-target=Development/github.com/personal
+target=Development/github.com/token-personal
+
+[git.coulson.ie*]
+target=Development/git.coulson.ie/token-pass
 
 [github.com/SegmaticJamesCoulson*]
-target=Development/github.com/work
+target=Development/github.com/token-work
 
 [github.com/TomusSubrosa*]
-target=Development/github.com/work
+target=Development/github.com/token-work
