Add private-internet-access to dotfiles
Include the applications to download as well as the configuration
files. As there are username/passwords used, the git-secret details
have also been changes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-.s3cfg
+## git-secret
+
+# git-secret seed file
 .gitsecret/keys/random_seed
+
+# Files hidden by git-secret
+.s3cfg
+pia-login.conf
+
+# Python compilation directory
 __pycache__/
