--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -136,7 +136,7 @@ package_couldinho-base() {
     install -Dm 0600 home.coulson.ie.nmconnection \
                      "$pkgdir/etc/NetworkManager/system-connections/home.coulson.ie.nmconnection"
     install -Dm 0644 pia.conf "$pkgdir/private-internet-access/pia.conf"
-    install -Dm 0600 login.conf "$pkgdir/private-internet-access/login.conf"
+    install -Dm 0600 pia-login.conf "$pkgdir/private-internet-access/login.conf"
 
     # Shell
     depends+=(
