--- a/stow/desktop/.i3status.conf
+++ b/stow/desktop/.i3status.conf
@@ -99,7 +99,7 @@ external_script checkupdates {
 external_script checkupdates_aur {
   cache_timeout = 1200
   button_show_notification = 1
-  script_path = "if is_online; then aur vercmp -d couldinho-arch-aur; fi"
+  script_path = "if is_online; then aur repo -u -d couldinho-arch-aur -r /var/cache/pacman/couldinho-arch-aur; fi"
   format = '\?if=line&color=degraded 󰀽  {line}'
 }
 
