Fix lightdm config

--- a/etc/lightdm/lightdm.conf
+++ b/etc/lightdm/lightdm.conf
@@ -123,10 +123,10 @@ session-wrapper=/etc/lightdm/Xsession
 #session-setup-script=
 #session-cleanup-script=
 #autologin-guest=false
-autologin-user=james
+#autologin-user=james
 #autologin-user-timeout=0
 #autologin-in-background=false
-autologin-session=i3
+#autologin-session=i3
 #exit-on-failure=false
 
 #
