--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -174,6 +174,7 @@ package_couldinho-base() {
 
     # Packages
     depends+=(
+        devtools            # Package building helpers
         aurutils-git        # AUR helper
         pacman-contrib      # Contains checkupdates plus other pacman scripts
         reflector           # Automatically sort out pacman mirrorlist
