Use pinentry-dmenu for gpg

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -228,6 +228,7 @@ package_couldinho-desktop() {
         dunst               	# Notification library
         python-pydbus           # Python DBus connector (used by usbguard i3status module)
         yubikey-touch-detector  # i3status notification for when yubikey needs attention 
+        pinentry-dmenu          # Enter GPG pins using dmenu
     )
 
     # Multimedia
@@ -260,7 +261,7 @@ package_couldinho-desktop() {
     depends+=(
         vivaldi                 # Browser
         vivaldi-ffmpeg-codecs   # Browser video codecs
-        #vivaldi-widevine        # Stream DRM support for vivaldi
+        vivaldi-widevine        # Stream DRM support for vivaldi
         pepper-flash            # Flash player
         x265                    # Video compression
         browserpass             # Browser extenson for pass
