--- a/stow/desktop/.gnupg/gpg-agent.conf
+++ b/stow/desktop/.gnupg/gpg-agent.conf
@@ -1,6 +1,6 @@
 # https://github.com/drduh/config/blob/master/gpg-agent.conf
 enable-ssh-support
 #pinentry-program /usr/bin/pinentry-curses
-pinentry-program /usr/bin/pinentry-qt
+pinentry-program /usr/bin/pinentry-dmenu
 default-cache-ttl 60
 max-cache-ttl 120
