--- a/conf/laptop/etc/i3status.conf
+++ b/conf/laptop/etc/i3status.conf
@@ -10,9 +10,13 @@ general {
 
 order += 'usbguard'
 order += 'yubikey'
+#order += 'file_status MSITVPN'
+#order += 'external_script pacdiff'
 #order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
+#order += 'external_script checkupdates_vcs'
+#order += 'external_script checkrebuild'
 order += 'external_script checkfirmware'
 #order += 'file_status decrypted'
 order += 'scratchpad_async'
@@ -20,16 +24,38 @@ order += 'net_rate'
 order += 'diskdata'
 order += 'sysdata'
 order += 'xrandr'
-order += 'xrandr_rotate'
+#order += 'xrandr_rotate'
+order += 'group wifi'
 order += 'ethernet wlp2s0'
 #order += 'file_status PIA'
 order += 'whatismyip'
+order += 'backlight'
 order += 'volume_status'
 order += 'do_not_disturb'
+order += 'battery_level'
 order += 'keyboard_layout'
 order += 'external_script date'
 order += 'clock'
 
+
+backlight {
+  cache_timeout = -1
+  brightness_delta = 10
+  low_tune_threshold = 10
+  command = 'light'
+  format = '\?color=good 󰀅  {level}%'
+  on_udev_backlight = 'refresh_and_freeze'
+}
+
+battery_level {
+  blocks = '󰀙󰀘󰀗󰀖󰀕'
+  charging_character = '󰀔'
+  color_charging = '#fabd2f'
+  format = '{icon}   {percent}%'
+  notify_low_level = true
+  cache_timeout = 1
+  on_udev_power_supply = 'refresh'
+}
 
 clock {
   format = '{Europe/Dublin}'
@@ -126,6 +152,11 @@ file_status decrypted {
   format = '\?if=path&color=degraded '
 }
 
+file_status MSITVPN {
+  paths = '/proc/sys/net/ipv4/conf/ppp0'
+  format = '\?if=path 󰀞'
+}
+
 file_status PIA {
   cache_timeout = -1
   paths = '/proc/sys/net/ipv4/conf/tun0'
@@ -163,6 +194,27 @@ whatismyip {
   icon_off = '󰀈'
   expected = {'country_iso': 'IE'}
   url_geo = 'https://echoip.coulson.ie/json'
+}
+
+group wifi {
+  button_next = 1
+  button_prev = 0
+
+  wifi brief {
+    #cache_timeout = -1
+    signal_bad = 0
+    bitrate_bad = 0
+    bitrate_degraded = 0
+    format = '󰀆|󰀆'
+  }
+
+  wifi detailed {
+    #cache_timeout = -1
+    signal_bad = 0
+    bitrate_bad = 0
+    bitrate_degraded = 0
+    format = '{ssid}  ({signal_percent})|󰀆'
+  }
 }
 
 xrandr {
