--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -321,13 +321,9 @@ package_couldinho-laptop() {
         light                   # Program to change backlight
     )
 
-    # i3
-    install -Dm 0644 laptop/etc/i3status.conf "$pkgdir/etc/couldinho-i3status.conf"
-
-    # Login manager
+    # Overwrite desktop files
+    install -Dm 0644 laptop/etc/i3status.conf "$pkgdir/etc/couldinho-laptop-i3status.conf"
     install -Dm 0644 laptop/etc/lightdm/lightdm-gtk-greeter.conf \
-        "$pkgdir/etc/lightdm/couldinho-lightdm-gtk-greeter.conf"
-
-    # Further i3 packages
-    install -Dm 0644 desktop/etc/rofi.conf "$pkgdir/etc/rofi.conf"
+        "$pkgdir/etc/lightdm/couldinho-laptop-lightdm-gtk-greeter.conf"
+    install -Dm 0644 laptop/etc/couldinho-laptop-rofi.conf "$pkgdir/etc/rofi.conf"
 }
